[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/Sprites_Personagens/Player/Principal (2).png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/Sprites_Personagens/Player/Principal (3).png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Sprites_Personagens/Player/Principal (1).png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Sprites_Personagens/Player/Principal (3) clma.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Sprites_Personagens/Player/Principal (1) cima.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Sprites_Personagens/Player/Principal (2) cima.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "stoped",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "stoped_up",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "run_up",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.14408, 9.8681 )

[node name="player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stoped_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.993252, -0.463515 )
shape = SubResource( 2 )

[node name="PositionUP" type="Position2D" parent="."]
position = Vector2( -1.40308, -14.4055 )

[node name="PositionLado" type="Position2D" parent="."]
visible = false
position = Vector2( 7.42563, -0.463516 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
limit_left = 0
limit_top = 0
limit_right = 1260
limit_bottom = 220
smoothing_enabled = true
smoothing_speed = 7.0
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
